tests/snapshots/04_combinators__b_combinator.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/04_combinators/b_combinator.lam
---
λx. λy. λz. x (y z)

term
  nodes: 20
  depth: 9

eval
  steps:    4
  reduces:  4
  allocs:   13
  time:     [time]
