tests/snapshots/04_combinators__c_combinator.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/04_combinators/c_combinator.lam
---
λx. λy. λz. x z y

term
  nodes: 20
  depth: 9

eval
  steps:    4
  reduces:  4
  allocs:   14
  time:     [time]
