tests/snapshots/04_combinators__skk.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/04_combinators/skk.lam
---
a

term
  nodes: 24
  depth: 8

eval
  steps:    7
  reduces:  7
  allocs:   13
  time:     [time]
