tests/snapshots/04_combinators__w_combinator.snap
---
source: tests/golden.rs
expression: snapshot_content
input_file: tests/golden/04_combinators/w_combinator.lam
---
λf. λx. f x x

term
  nodes: 16
  depth: 7

eval
  steps:    3
  reduces:  3
  allocs:   9
  time:     [time]
